--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,38 @@
-<h1>Finnalyze</h1>
+<!doctype html>
+<html>
+<head>
+  <title>finnalyze</title>
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<main>
+
+  <section>
+  <h1>1. Gjør et utvalg av annonser</h1>
+  </section>
+  <section>
+  <img src="merker.png" height=200px>
+  </section>
+
+  <section>
+  <h1>2. Kopier linken fra adressefeltet</h1>
+  </section>
+  <section>
+  <img src="link.png">
+  </section>
+
+  <section>
+  <h1>3. Lim inn linken her</h1>
+  </section>
+  <section>
+    <form method="GET" action="/analyze">
+      <input type=text name="url" autocomplete=”off”><br>
+      <input type=submit value="Last annonser">
+    </form>
+  </section>
+
+</main>
+
+</body>
+</html>
