--- a/public/index.html
+++ b/public/index.html
@@ -9,30 +9,44 @@
 <main>
 
   <section>
-  <h1>1. Gjør et utvalg av annonser</h1>
-  </section>
-  <section>
-  <img src="merker.png" height=200px>
+    <h1>1. Gjør et utvalg av annonser</h1>
+    <img src="merker.png" height=200px>
   </section>
 
   <section>
-  <h1>2. Kopier linken fra adressefeltet</h1>
-  </section>
-  <section>
-  <img src="link.png">
+    <h1>2. Kopier linken fra adressefeltet</h1>
+    <img src="link.png">
   </section>
 
   <section>
-  <h1>3. Lim inn linken her</h1>
-  </section>
-  <section>
+    <h1>3. Lim inn linken her</h1>
     <form method="GET" action="/analyze">
       <input type=text name="url" autocomplete=”off”><br>
       <input type=submit value="Last annonser">
     </form>
+    <progress value="0" max="100" style=display:none>
   </section>
 
 </main>
-
 </body>
+<script type=text/javascript src=jquery-2.1.4.min.js></script>
+<script type=text/javascript>
+var form = $('form');
+var progress = $('progress')
+form.on('submit', function(e) {
+  form.hide();
+  progress.show();
+  setInterval(function() {
+    console.log('kokoko');
+
+    $.get('/progress', function(data) {
+      console.log(data);
+    });
+  }, 1000);
+
+
+});
+
+</script>
+
 </html>
