--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>finnalyze</title>
+  <title>orbweaver</title>
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
   <h1>1. Gjør et utvalg av annonser</h1>
   </section>
   <section>
-  <img src="merker.png" height=200px>
+  <img src="merker.png">
   </section>
 
   <section>
